--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "@mui/material": "^6.2.0",
     "cra-template": "1.2.0",
     "react": "^19.0.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-loading-skeleton": "^3.5.0",
     "react-router-dom": "^7.0.2",
     "react-scripts": "5.0.1",
-    "react-toastify": "^11.0.2"
+    "react-toastify": "^11.0.2",
+    "react-use": "^17.6.0"
   },
   "scripts": {
     "start": "react-scripts start",
